Add profile page with updating users and saving photos on cloudinary

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,4 +1,8 @@
 {
   "LOGIN": "Login",
-  "LOGOUT": "Logout"
+  "LOGOUT": "Logout",
+  "FIRSTNAME": "First Name",
+  "LASTNAME": "Last Name",
+  "ABOUT": "About",
+  "NEWIMAGE": "New image"
 }
