--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -1,4 +1,8 @@
 {
   "LOGIN": "Авторизация",
-  "LOGOUT": "Выход"
+  "LOGOUT": "Выход",
+  "FIRSTNAME": "Имя",
+  "LASTNAME": "Фамилия",
+  "ABOUT": "Обо мне",
+  "NEWIMAGE": "Новая ава"
 }
