--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -21,5 +21,7 @@
   "TAGS": "Тэги",
   "PREVIEW": "Предпросмотр",
   "EDITING": "Редактирование",
-  "EXPORT_PDF": "Эеспортировать в PDF"
+  "EXPORT_PDF": "Экспортировать в PDF",
+  "CATEGORY": "Категория",
+  "MORE_INFO": "Подробно"
 }
