Add new logic to other files

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -23,5 +23,8 @@
   "EDITING": "Editing",
   "EXPORT_PDF": "Export to PDF",
   "CATEGORY": "Category",
-  "MORE_INFO": "More info"
+  "MORE_INFO": "More info",
+  "USERS": "Users",
+  "ENABLED": "Enabled",
+  "YOUR_RATE": "Your mark - "
 }
