--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -23,5 +23,8 @@
   "EDITING": "Редактирование",
   "EXPORT_PDF": "Экспортировать в PDF",
   "CATEGORY": "Категория",
-  "MORE_INFO": "Подробно"
+  "MORE_INFO": "Подробно",
+  "USERS": "Пользователи",
+  "ENABLED": "Включён",
+  "YOUR_RATE": "Ваша оценка - "
 }
