Add medals to admin page + some fixes

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -26,5 +26,6 @@
   "MORE_INFO": "More info",
   "USERS": "Users",
   "ENABLED": "Enabled",
-  "YOUR_RATE": "Your mark - "
+  "YOUR_RATE": "Your mark - ",
+  "DELETE_INSTRUCTION": "Delete instruction"
 }
