--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -9,7 +9,7 @@
   "CREATEINSTRUCTION": "Create instruction",
   "INSTRUCTIONTITLE": "Instruction title",
   "NEWPARTIMAGE": "Upload image",
-  "IMAGE_PLACEHOLDER": "You can also tap or drag&drop here",
+  "IMAGE_PLACEHOLDER": "You can also tap here",
   "STEP_NAME": "Step name",
   "CREATE_NEW_TEXT": "Create new text",
   "CREATE_NEW_IMAGE": "Create new image",
@@ -38,5 +38,6 @@
   "INSTRUCTION_NAME": "Instruction name",
   "INSTRUCTION_CATEGORY": "Instruction category",
   "AUTHOR": "Author",
-  "MOST_POPULAR": "Most popular"
+  "MOST_POPULAR": "Most popular",
+  "SEARCH": "Search instruction"
 }
