--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -39,5 +39,6 @@
   "INSTRUCTION_CATEGORY": "Категория инструкции",
   "AUTHOR": "Автор",
   "MOST_POPULAR": "Самые популярные",
-  "SEARCH": "Поиск по инструкциям"
+  "SEARCH": "Поиск по инструкциям",
+  "ADMIN": "Администратор"
 }
