Add instructions component + hot fix collapsable

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -40,5 +40,6 @@
   "AUTHOR": "Author",
   "MOST_POPULAR": "Most popular",
   "SEARCH": "Search instruction",
-  "ADMIN": "Admin"
+  "ADMIN": "Admin",
+  "INSTRUCTIONS": "Instructions"
 }
