--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -40,5 +40,6 @@
   "AUTHOR": "Автор",
   "MOST_POPULAR": "Самые популярные",
   "SEARCH": "Поиск по инструкциям",
-  "ADMIN": "Администратор"
+  "ADMIN": "Администратор",
+  "INSTRUCTIONS": "Инструкции"
 }
